# personal_library_studies

./: .env .example  .gitignore  pyproject.toml
docs/: REFERENCE.md
mcp-app/: mcp-app.html  package-lock.json  package.json  server.ts
mcp-app/src/: mcp-app.ts
src/a2a_learn/: Makefile  README.md  agent.json  agent.py  pyproject.toml  requirements.txt
src/a2a_learn/src/helloworld/: README.md
src/litellm_learn/: README.md  embed.py  llama2.py  simple.py  stream.py  structured_output.py  use_proxy.py  web_fetch.py  web_search.py
src/litellm_learn/proxy_server/: MEMO.md  config.yaml.example
src/llama_learn/: README.md  db_rag.py  simple_agent.py  simple_call.py  simple_context.py  simple_rag.py
src/llama_learn/data/: name.md
src/smolagents/: tool.py
src/smolagents_learn/: memo.md  pyproject.toml  rag.py  sql_tool.py  web.py
src/smolagents_learn/etcetera/: default_web_tool.py  python_tool.py
tools/postgres/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  postgresql.conf
tools/postgres/init/: 01_create_extensions.sql  02_create_sample_tables.sql
