[project]
name = "personal-library-studies"
version = "0.1.0"
description = "あれこれライブラリを試していく"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm[proxy]>=1.81.0",
    "llama-index>=0.14.13",
    "llama-index-readers-database>=0.5.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.0",
    "smolagents[toolkit]",
]
